@@ -4,6 +4,11 @@ Changelog
 3.0b4 - Unreleased
 ------------------
 
+- Make the ``secure`` option of cookies configurable. This allows to restrict
+  cookies to HTTPS connections alone. This closes
+  http://dev.plone.org/plone/ticket/7897.
+  [pfurman, hannosch]
+
 - Use the standard libraries doctest module, instead of the deprecated one
   from zope.testing.
   [hannosch]
